bug: Fixed width on mobile

--- a/app.css
+++ b/app.css
@@ -1,137 +1,82 @@
+/* Colors and themes */
 :root {
-  --bg-light: #FDFDFF;
-  --color-light: #393D3F;
-  --bg-dark: #393D3F;
-  --color-dark: #FDFDFF;
+  --bg-light: #fdfdff;
+  --color-light: #393d3f;
+  --bg-dark: #393d3f;
+  --color-dark: #fdfdff;
   --color-link-light: #cf4e47;
   --color-link-dark: #e08f8b;
   --color-link-hover-light: #7c2922;
   --color-link-hover-dark: #fdc7c4;
 }
+.latex-light-auto {
+  background-color: var(--bg-light);
+  color: var(--color-light);
+}
+.latex-light-auto a {
+  color: var(--color-link-light) !important;
+}
+.latex-light-auto a:hover {
+  color: var(--color-link-hover-light) !important;
+}
+.latex-dark-auto {
+  background-color: var(--bg-dark);
+  color: var(--color-dark);
+}
+.latex-dark-auto a {
+  color: var(--color-link-dark) !important;
+}
+.latex-dark-auto a:hover {
+  color: var(--color-link-hover-dark) !important;
+}
 
+/* Element styles */
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif !important;
 }
-
 body {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-
 a {
   color: var(--color-link) !important;
   text-decoration: none;
 }
-
 a:hover {
   color: var(--color-link-hover) !important;
 }
-
 a:focus,
 a:active {
   outline: none;
   box-shadow: none;
 }
 
-.latex-light-auto {
-  background-color: var(--bg-light);
-  color: var(--color-light);
-}
-
-.latex-light-auto a {
-  color: var(--color-link-light) !important;
-}
-
-.latex-light-auto a:hover {
-  color: var(--color-link-hover-light) !important;
-}
-
-.latex-dark-auto {
-  background-color: var(--bg-dark);
-  color: var(--color-dark);
-}
-
-.latex-dark-auto a {
-  color: var(--color-link-dark) !important;
-}
-
-.latex-dark-auto a:hover {
-  color: var(--color-link-hover-dark) !important;
-}
-
+/* Main container for all content */
 .container {
   display: flex;
-  flex-direction: row;
-  width: 900px;
   gap: 40px;
 }
-
+/* Left column (profile and contact) styles */
 .col-left {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 400px;
 }
-
-.contact-info a {
-  color: inherit;
-}
-
-.col-right {
-  width: 100%;
-}
-
 .profile-photo {
   margin-top: 50px;
 }
-
 .profile-name {
   margin-top: 25px;
 }
-
-.btn {
-  border: none;
-  border-radius: 100%;
-  padding: 10px;
-  box-shadow: none;
+.contact-info a {
+  color: inherit;
 }
-
-.btn:active {
-  box-shadow: none;
-  outline: none;
-}
-
-.btn-light {
-  background-color: var(--bg-light);
-  color: var(--color-light);
-  transition: 0.15s ease-in background-color;
-}
-
-.btn-light:hover {
-  cursor: pointer;
-  background-color: #dddcda;
-}
-
-.btn-dark {
-  background-color: var(--bg-dark);
-  color: var(--color-dark);
-  transition: 0.15s ease-in background-color;
-}
-
-.btn-dark:hover {
-  cursor: pointer;
-  background-color: #54565a;
-}
-
-#toggle-theme {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
+/* One column for tablet and mobile displays */
 @media (max-width: 900px) {
   .container {
+    width: 90vw !important;
     flex-direction: column;
     align-items: center !important;
   }
@@ -141,12 +86,54 @@ a:active {
     align-items: center;
   }
 }
-
+/* Two columns for desktop displays */
 @media (min-width: 900px) {
   body {
     max-width: 80% !important;
   }
+  .container {
+    width: 900px;
+    flex-direction: row;
+  }
   .profile {
     align-self: flex-start;
   }
+}
+/* Right column (main content) styles */
+.col-right {
+  width: 100%;
+}
+/* Theme toggling button */
+.btn {
+  border: none;
+  border-radius: 100%;
+  padding: 10px;
+  box-shadow: none;
+}
+.btn:active {
+  box-shadow: none;
+  outline: none;
+}
+.btn-light {
+  background-color: var(--bg-light);
+  color: var(--color-light);
+  transition: 0.15s ease-in background-color;
+}
+.btn-light:hover {
+  cursor: pointer;
+  background-color: #dddcda;
+}
+.btn-dark {
+  background-color: var(--bg-dark);
+  color: var(--color-dark);
+  transition: 0.15s ease-in background-color;
+}
+.btn-dark:hover {
+  cursor: pointer;
+  background-color: #54565a;
+}
+#toggle-theme {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
